Refactor usages of `SecurityLevel` to use Helidon Common types instead of annotations and reflection.